feat: add files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+              <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+              <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+              <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+            </ul>
+          </nav>
+          
+    </header>
+    <main class="main">
+        <div class="main-container">
+            <section class="section" id="profile" > <img src="image.jpg" alt="my photo" width=180px height=250px>    <h1 class="section-tittle"> Ksenija Perminava </h1> 
+            <h2>Junior Frontend Developer</h2>
+            </section>
+            <section class="section" id="contacts"> 
+                <h2>Contacts</h2>
+                <ul>
+                    <li>location: Minsk, Belarus</li>
+                <li>phone: +375 29 7762384</li>
+                <li>email: mewrika@mail.ru</li>
+                <li><a class="nav-link" href="https://github.com/mewrika86"> GitHub:mewrika86</a> </li> 
+               </ul>   </section>
+            <section class="section" id="summary"> <h2>Summary</h2><p>I am smart, patient and persevering, ready to learn, to overcome difficulties. I want to learn more, improve my knowledge and skills.</p>       </section>
+            <section class="section" id="skills"> <h2>Skills</h2>  
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Git</li>
+                <li>JavaScript(basic) </li></ul>    </section>
+            <section class="section" id="code">  
+                  <h2>Code</h2>
+<pre> 
+&ltdiv class="card-hello"&gt Code example &lt/div&gt
+&ltstyle>
+.card-hello{
+background:#FA7268;
+color:#FFFFFF;
+width:230px;
+height:25px;
+padding:20px;
+margin:10px;
+border:2px solid #9C27B0;
+font-size:20px;
+}
+&lt/style&gt
+        </pre>    
+            </section>
+            <section class="section" id="courses"> <h2>Courses</h2>  HTML-Academy     </section>
+            <section class="section" id="education"><h2>Education</h2>    <p>Belarusian State Medical University, dentistry department</p>    </section>
+            <section class="section" id="english"> <h2>English</h2> <p>B1 -Pre-intermediate</p>      </section>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <a class="nav-link" href="https://rs.school/js/">Курс «JavaScript/Front-end»
+                    <img class="logo"src="https://rs.school/images/rs_school_js.svg">
+                </a>
+                <a class="nav-link" href="https://github.com/mewrika86"> GitHub:mewrika86</a> 
+            </div>
+            </footer>
 </body>
 </html>
