feat: update files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,7 +24,7 @@
     </header>
     <main class="main">
         <div class="main-container">
-            <section class="section" id="profile" > <img src="image.jpg" alt="my photo" width=180px height=250px>    <h1 class="section-tittle"> Ksenija Perminava </h1> 
+            <section class="section" id="profile" > <img src="image.jpg" alt="my photo" width=180 height=250>    <h1 class="section-tittle"> Kseniya Perminava </h1> 
             <h2>Junior Frontend Developer</h2>
             </section>
             <section class="section" id="contacts"> 
@@ -44,8 +45,8 @@
             <section class="section" id="code">  
                   <h2>Code</h2>
 <pre> 
-&ltdiv class="card-hello"&gt Code example &lt/div&gt
-&ltstyle>
+    &lt;div class="card-hello"&gt; Code example &lt;/div&gt;
+    &lt;style&gt;
 .card-hello{
 background:#FA7268;
 color:#FFFFFF;
@@ -56,7 +57,7 @@ margin:10px;
 border:2px solid #9C27B0;
 font-size:20px;
 }
-&lt/style&gt
+&lt;/style&gt;
         </pre>    
             </section>
             <section class="section" id="courses"> <h2>Courses</h2>  HTML-Academy     </section>
@@ -67,7 +68,7 @@ font-size:20px;
         <footer class="footer">
             <div class="container">
                 <a class="nav-link" href="https://rs.school/js/">Курс «JavaScript/Front-end»
-                    <img class="logo"src="https://rs.school/images/rs_school_js.svg">
+                    <img class="logo" src="https://rs.school/images/rs_school_js.svg" alt="logo">
                 </a>
                 <a class="nav-link" href="https://github.com/mewrika86"> GitHub:mewrika86</a> 
             </div>
